# lung-segmentation-cuda-utilized

./: .gitignore  CMakeLists.txt  README.md  main.cxx  preprocess.cu  preprocess.cuh
